--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,7 +22,8 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
     - name: Run SUT
-      run:  java -jar ./artifacts/app-ibank.jar -P:profile=test -port=9999
+      run:  java -jar ./artifacts/app-ibank.jar -P:profile=test
+            java -jar ./artifacts/app-ibank.jar &
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build witch Gradle
